--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.30.1",
     "petra-plugin-wallet-adapter": "^0.4.5",
     "pusher-js": "^8.4.0-rc2",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
