--- a/QR-Reader/my-app/package.json
+++ b/QR-Reader/my-app/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
+    "@tailwindcss/vite": "^4.1.10",
     "html5-qrcode": "^2.3.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
