--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@aptos-labs/wallet-adapter-ant-design": "^3.0.23",
     "@aptos-labs/wallet-adapter-react": "^3.7.9",
+    "@heroicons/react": "^2.2.0",
     "@mizuwallet-sdk/core": "^1.4.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "@telegram-apps/bridge": "^1.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -26,6 +28,7 @@
     "jsencrypt": "^3.3.2",
     "moment": "^2.30.1",
     "petra-plugin-wallet-adapter": "^0.4.5",
+    "postcss": "^8.5.6",
     "pusher-js": "^8.4.0-rc2",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
@@ -33,6 +36,7 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
+    "tailwindcss": "^4.1.10",
     "three": "^0.171.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
