--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,6 @@
     "jsencrypt": "^3.3.2",
     "moment": "^2.30.1",
     "petra-plugin-wallet-adapter": "^0.4.5",
-    "postcss": "^8.5.6",
     "pusher-js": "^8.4.0-rc2",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
@@ -67,6 +66,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/crypto-js": "^4.2.2"
+    "@types/crypto-js": "^4.2.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.1.1"
   }
 }
